--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "evarugs",
   "version": "1.0.0",
+  "repository": {
+    "url": "git+https://github.com/TimMakh/Evarugs.git"
+  },
   "description": "Evarugs project",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --open --node-env=development",
     "build-dev": "webpack  --node-env=development",
     "build-prod": "webpack serve --open --node-env=production",
-    "clear": "rd /s /q dist"
+    "clear": "rd /s /q dist",
+    "predeploy": "npm run build-dev",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "TimMakh",
@@ -15,6 +20,7 @@
   "devDependencies": {
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^5.0.0",
+    "gh-pages": "^5.0.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.5",
